--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,21 @@ body{
     justify-content: center;
     height: 100vh;
     flex-direction: column;
+    text-align: center;
     
 }
 .container{
     height: 300px;
     width: 400px;
-    border: 2px solid rgb(124, 124, 211);
 
+}
+.main-content {
+    width: 100%;
+    height:fit-content;
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 50px 40px;
+    box-shadow: 0 0 10px;
 }
 h1{
     padding: 20px;
